# SVEngine

./: .gitignore  LICENSE  README.md
SVECamera/SVEVideo/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
SVECamera/SVEVideo.xcodeproj/: project.pbxproj
SVECamera/SVEVideo/Base.lproj/: Main.storyboard
SVECamera/SVEVideo/datasrc/: SWDataSource.h  SWDataSource.m  SWDataSourceCamera.m  SWDataSourceNet.m  SWDataSourcePic.h  SWDataSourcePic.m  SWInStream.h  SWInStream.m  SWInStreamBuffer.h  SWInStreamSampleBuffer.m  SWOutStream.h  SWOutStream.m  SWOutStreamBuffer.m  SWOutStreamSampleBuffer.h  SWOutStreamSampleBuffer.m
SVECamera/SVEVideo/detect/: Detection.h  SWDetectionSenseTime.h  SWDetectionSenseTime.m
SVECamera/SVEVideo/media/: Camera.h  Camera.m  RecordImage.h  RecordMedia.h
SVECamera/SVEVideo/swbasic/: SWBasicSys.h  SWBasicSys.m  SWMediaPlayer.h  SWMotionManager.h  SWMotionManager.mm  SWPreDef.h  SWRecord.h  SWRecord.m
SVECamera/SVEVideo/swlogic/: SWLogicFilter.h  SWLogicFilter.m  SWLogicFunction.h  SWLogicPlatform.h  SWLogicSys.h  SWLogicSys.mm  SWLogicUser.h  SWState.h
SVECamera/SVEVideo/swui/: SWBaseUI.h  SWBaseUI.m  SWClauseUI.h  SWClauseUI.m  SWDisplayVideoUI.h  SWFrameUI.h  SWMainUI.h  SWMainUI.m  SWMainVC.m  SWNavigationController.m  SWProgressView.m  SWSVView.h  SWSVView.m  SWUISys.h  SWUISys.m  SWUserUI.h
SVECamera/SVEVideo/utility/: SWFileUtil.h  SWFileUtil.m  SWStateFilterFile.m  SWTimer.h  SWTimer.m  UIImage+Helper.h  Utility.m
SVEDemo-ANDROID/: build.gradle  settings.gradle
SVEDemo-ANDROID/SVEAndroid/: build.gradle
SVEDemo-ANDROID/SVEAndroid/cmake/cmake/: CMakeLists.txt
SVEDemo-ANDROID/SVEAndroid/src/main/cpp/: CMakeLists.txt
SVEDemo-ANDROID/SVEAndroid/src/main/cpp/wrap/: SVEngineSystem.cpp  SVEngineSystem.h  SVEngineWarp.cpp  SVEngineWarp.h  SVImagerReader.cpp  SVImagerReader.h
SVEDemo-ANDROID/SVEAndroid/src/main/cpp/wrap/filter/: SVFaceBeautyShowFilter.cpp  SVFaceBeautyShowFilter.h  SVFilterExtDef.h  SVOpFaceBeautyExt.cpp  SVOpFaceBeautyExt.h  SVWatermark.cpp  SVWatermark.h
SVEDemo-ANDROID/SVEDemo/: build.gradle
SVEDemo-ANDROID/gradle/wrapper/: gradle-wrapper.properties
SVEDemo-iOS/SVEDemo/: AppDelegate.h  AppDelegate.m  Info.plist  SDCamera.m  SDLogicSys.h  SDLogicSys.m  SDMainUI.h  SDMainUI.m  SDMainVC.h  SDMainVC.m  SDPreDef.h  SDSVView.h  SDSVView.m  SDState.h  SDState.m  SDUISys.h  SDUISys.m  ViewController.h  ViewController.m  main.m
SVEDemo-iOS/SVEDemo.xcodeproj/: project.pbxproj
SVEDemo-iOS/SVEDemo/sve/: SVI.h  SVI.mm  SVICamera.h  SVICamera.mm  SVIDef.h  SVIDetect.mm  SVIEffect.h  SVIEffect.mm  SVIHead.h  SVIThread.h  SVIThread.mm  SVInterfaceBase.h  SVInterfaceBase.mm
SVEGame/extent/: SVFaceDanceAudioSys.cpp  SVFaceDanceAudioSys.h  SVFaceDanceBatUI.cpp  SVFaceDanceBatUI.h  SVFaceDanceEvent.cpp  SVFaceDanceEvent.h  SVFaceDanceHelpSys.cpp  SVFaceDanceHelpSys.h  SVFaceDanceMain.cpp  SVFaceDanceMain.h  SVFaceDanceResConfig.cpp  SVFaceDanceResConfig.h  SVFaceDanceResultUI.cpp  SVFaceDanceResultUI.h  SVFaceDanceUnit.cpp  SVFaceDanceUnit.h  SVFaceDanceUnitMgr.cpp  SVFaceDanceUnitMgr.h  SVFlowerDanceBatUI.cpp  SVFlowerDanceBatUI.h  SVFlowerDanceDef.h  SVFlowerDanceEvent.cpp  SVFlowerDanceEvent.h  SVFlowerDanceHelp.cpp  SVFlowerDanceHelp.h  SVFlowerDanceMain.cpp  SVFlowerDanceMain.h  SVFlowerDanceMgr.cpp  SVFlowerDanceMgr.h  SVFlowerDancePlayer.cpp  SVFlowerDancePlayer.h  SVFlowerDanceUnit.cpp  SVFlowerDanceUnit.h  SVGameBase.cpp  SVGameBase.h  SVGameBuff.cpp  SVGameBuff.h  SVGameCommonCombo.cpp  SVGameCommonCombo.h  SVGameCommonEvent.cpp  (+67 more)
SVERes/sve.bundle/shader/: EdgeDetectionsSobel.fs  GuidedImageFilter_Eq5.fs  GuidedImageFilter_Eq6.fs  GuidedImageFilter_Eq8.fs  MeanFilter.fs  SkinAnimate3d.vs  SkinModel.vs  SkyDome.fs  SkyDome.vs  baseFilterAdjustment.fs  beauty.fs  beauty03.fs  bgra2rgba.fs  blur.fs  blur_fair_gus.fs  blur_fair_hipass.fs  blur_fair_mix.fs  brilateralfilter.fs  brilateralfilter.vs  brilateralfilter02.fs  clear.fs  color.fs  debugFacePt.fs  debugFacePt.vs  depth3d.fs  depth3d.vs  depthPlan.fs  depthPlan.vs  faceBeauty.fs  faceBeauty.vs  faceShape.fs  faceShape.vs  faceShape02.fs  faceShape02.vs  frame2d.fs  gamma.fs  gaussian.fs  gaussian01.fs  geo3d.fs  geo3d.vs  (+45 more)
SVERes/sve.bundle/svres/: fmcfg.json  fontsan.fnt  fonttest.fnt
SVEVideo/platIOS/SVEVideo/: AppDelegate.m  Info.plist  magic_cfg.json
SVEVideo/platIOS/SVEVideo.xcodeproj/: project.pbxproj
SVEngine/: cmake_install.cmake
SVEngine/platAndriod/cmake/: CMakeLists.txt  config.h.in
SVEngine/platIOS/SVEngine.xcodeproj/: project.pbxproj
SVEngine/scripts/: build-library.sh
SVEngine/src/: SVEConfig.h
SVEngine/src/act/: SVActBase.cpp  SVActBase.h  SVActDeclare.h  SVActDef.h  SVActDeform.cpp  SVActDeform.h  SVActFollow.cpp  SVActFollow.h  SVActMtl.cpp  SVActPhysics.cpp  SVActPhysics.h  SVActSequence.cpp  SVActSequence.h  SVActTexAttachment.cpp  SVActTexAttachment.h  SVActTime.cpp  SVActTime.h  SVActionMgr.cpp  SVActionMgr.h  SVActionSys.cpp  SVActionSys.h  SVActionUnit.cpp  SVActionUnit.h  SVAniBase.cpp  SVAniBase.h  SVAniTexAttachment.cpp  SVAniTexAttachment.h  SVAniTrigger.cpp  SVAniTrigger.h  SVCameraCtrl.cpp  SVCameraCtrl.h  SVDragma.cpp  SVDragma.h  SVKeyFrame.cpp  SVKeyFrame.h  SVMovie.cpp  SVMovie.h  SVNodeCtrl.cpp  SVNodeCtrl.h  SVNodeCtrlCamera.cpp  (+12 more)
SVEngine/src/app/: SVGlobalMgr.cpp  SVGlobalMgr.h  SVGlobalParam.cpp  SVGlobalParam.h  SVInst.cpp  SVInst.h
SVEngine/src/base/: SVArray.h  SVBMFontConf.cpp  SVBMFontConf.h  SVBase.cpp  SVBase.h  SVBase.spu.h  SVBounds.cpp  SVBounds.h  SVColor.cpp  SVCompileConfig.h  SVCoreTree.h  SVDataChunk.cpp  SVDataChunk.h  SVDataSwap.cpp  SVDataSwap.h  SVDatatDef.h  SVDef.h  SVGBase.cpp  SVGBase.h  SVGeometry.cpp  SVGeometry.h  SVIDPool.cpp  SVIDPool.h  SVJsonTool.cpp  SVJsonTool.h  SVListenBase.cpp  SVLock.cpp  SVLock.h  SVLockSpin.cpp  SVMap.spu.h  SVMat2.cpp  SVMat2.h  SVMat3.cpp  SVMat3.h  SVMat4.cpp  SVMat4.h  SVMat4d.cpp  SVMat4d.h  SVMathLib.cpp  SVMathLib.h  (+35 more)
SVEngine/src/basesys/: SVBasicSys.cpp  SVBasicSys.h  SVCameraMgr.cpp  SVCameraMgr.h  SVConfig.cpp  SVTrans.h  (+39 more)
doc/工程配置/: 工程配置.pages
(+1392 files in other folders)
